# rawrtc-data-channel

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  make-dependencies.sh  meson.build
.circleci/: config.yml
.circleci/images/: build-and-push-all.sh
.circleci/images/archlinux/: Dockerfile
.circleci/images/bionic/: Dockerfile
.circleci/images/trusty/: Dockerfile
.circleci/images/xenial/: Dockerfile
docs/: CMakeLists.txt  Doxyfile.cmakein  conf.py.cmakein  index.rst
include/: rawrtcdc.h
include/rawrtcdc/: config.h.in  data_channel.h  data_channel_parameters.h  data_transport.h  external.h  main.h  sctp_capabilities.h  sctp_redirect_transport.h  sctp_transport.h
src/: CMakeLists.txt
src/crc32c/: crc32c.c  crc32c.h  meson.build  software.h  sse42.c
src/data_channel/: attributes.c  channel.c  channel.h  utils.c
src/data_channel_parameters/: attributes.c  parameters.c  parameters.h
src/data_transport/: meson.build  transport.c  transport.h  utils.c
src/include/: CMakeLists.txt  rawrtcdc.h  rawrtcdc_internal.h.cmakein
src/librawrtcdc/: CMakeLists.txt  crc32c.c  crc32c.h  data_channel.c  data_channel.h  data_channel_options.c  data_channel_options.h  data_channel_parameters.c  data_channel_parameters.h  data_transport.c  data_transport.h  main.c  main.h  sctp_capabilities.c  sctp_capabilities.h  sctp_redirect_transport.c  sctp_redirect_transport.h  sctp_transport.c  sctp_transport.h
src/main/: main.c  main.h
src/sctp_capabilities/: attributes.c  capabilities.c  capabilities.h
src/sctp_redirect_transport/: attributes.c  transport.c  transport.h  utils.c
src/sctp_transport/: attributes.c  transport.c  transport.h  utils.c
subprojects/: rawrtcc.wrap  re.wrap  usrsctp.wrap
